--- a/docs/_includes/book/book-banner.html
+++ b/docs/_includes/book/book-banner.html
@@ -4,10 +4,10 @@
     <div class="container">
       <div class="bd-book-columns">
         <div class="bd-book-column bd-is-cover">
-          {% include book-cover.html %}
+          {% include book/book-cover.html %}
         </div>
         <div class="bd-book-column bd-is-content">
-          {% include book-content.html show_cover=false %}
+          {% include book/book-content.html show_cover=false %}
         </div>
       </div>
     </div>
