--- a/docs/_includes/book/book-content.html
+++ b/docs/_includes/book/book-content.html
@@ -7,7 +7,7 @@
 
   {% if include.show_cover %}
     <div class="bd-book-inline-cover">
-      {% include book-cover.html %}
+      {% include book/book-cover.html %}
     </div>
   {% endif %}
 
