--- a/docs/_includes/book/book-modal.html
+++ b/docs/_includes/book/book-modal.html
@@ -3,10 +3,10 @@
   <div class="modal-content">
     <div class="bd-book-modal-columns">
       <div class="bd-book-modal-column bd-is-cover">
-        {% include book-cover.html %}
+        {% include book/book-cover.html %}
       </div>
       <div class="bd-book-modal-column bd-is-content">
-        {% include book-content.html show_cover=true %}
+        {% include book/book-content.html show_cover=true %}
       </div>
     </div>
   </div>
