--- a/docs/_includes/elements/variables.html
+++ b/docs/_includes/elements/variables.html
@@ -24,7 +24,7 @@
 
 {% endcapture %}
 
-{% include anchor.html name=anchor_name %}
+{% include elements/anchor.html name=anchor_name %}
 
 <div class="content">
   <p>{{ content | strip }}</p>
