--- a/docs/_includes/global/footer.html
+++ b/docs/_includes/global/footer.html
@@ -1,10 +1,10 @@
-{% include native.html %}
+{% include global/native.html %}
 
-{% include book-banner.html %}
+{% include book/book-banner.html %}
 
-{% include sponsors.html %}
+{% include global/sponsors.html %}
 
-{% include newsletter.html %}
+{% include global/newsletter.html %}
 
 <footer class="footer">
   <div class="container">
@@ -83,6 +83,6 @@
   </div>
 </footer>
 
-{% include book-modal.html %}
+{% include book/book-modal.html %}
 
-{% include scripts.html %}
+{% include global/scripts.html %}
