--- a/docs/_includes/index/intro.html
+++ b/docs/_includes/index/intro.html
@@ -50,10 +50,10 @@
 
       <div class="intro-partners">
         <div class="intro-sponsor">
-          {% include sponsor.html %}
+          {% include index/sponsor.html %}
         </div>
         <div class="intro-carbon">
-          {% include carbon.html %}
+          {% include elements/carbon.html %}
         </div>
       </div>
     </div>
