--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -3,7 +3,7 @@ layout: default
 route: documentation
 ---
 
-{% include navbar.html id="Documentation" %}
+{% include global/navbar.html id="Documentation" %}
 
 {% assign current_category = page.doc-tab %}
 {% assign current_link_id = page.breadcrumb | last %}
@@ -47,7 +47,7 @@ route: documentation
             </p>
             {% if page.meta %}
               {%
-                include meta.html
+                include elements/meta.html
                 colors=page.meta.colors
                 sizes=page.meta.sizes
                 variables=page.meta.variables
@@ -57,7 +57,7 @@ route: documentation
           </div>
 
           <div class="bd-header-carbon">
-            {% include carbon.html %}
+            {% include elements/carbon.html %}
           </div>
         </header>
 
