--- a/docs/_sass/twitter.sass
+++ b/docs/_sass/twitter.sass
@@ -11,8 +11,8 @@ $tw-grey: #697882
 
 .bd-tw
   background-color: #fff
-  border: 1px solid #e1e8ed
-  border-radius: 5px
+  border: 2px solid #e1e8ed
+  border-radius: $radius-large
   color: $tw-grey
   flex-shrink: 0
   font-family: Helvetica, Roboto, "Segoe UI", Calibri, sans-serif
