--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11482,8 +11482,8 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 
 .bd-tw {
   background-color: #fff;
-  border: 1px solid #e1e8ed;
-  border-radius: 5px;
+  border: 2px solid #e1e8ed;
+  border-radius: 6px;
   color: #697882;
   flex-shrink: 0;
   font-family: Helvetica, Roboto, "Segoe UI", Calibri, sans-serif;
@@ -11715,7 +11715,7 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 }
 
 .bd-expo {
-  background-color: whitesmoke;
+  background-color: white;
   padding: 1.5rem;
 }
 
@@ -11794,10 +11794,6 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   .bd-website-image {
     margin-bottom: 3rem;
   }
-}
-
-.bd-love {
-  background-color: whitesmoke;
 }
 
 .bd-testimonials {
@@ -11902,9 +11898,6 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 }
 
 @media screen and (max-width: 768px) {
-  .bd-love {
-    padding: 1.5rem;
-  }
   .bd-hug {
     margin: 1.5rem;
   }
@@ -11923,9 +11916,6 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 }
 
 @media screen and (min-width: 769px), print {
-  .bd-love {
-    padding: 3rem 1.5rem;
-  }
   .bd-embrace {
     align-items: center;
     display: flex;
