--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -238,7 +238,7 @@ meta:
   </div>
 </div>
 
-{% include anchor.html name="Dropdown content" %}
+{% include elements/anchor.html name="Dropdown content" %}
 
 <div class="content">
   <p>
@@ -255,7 +255,7 @@ meta:
   </div>
 </div>
 
-{% include anchor.html name="Hoverable or Toggable" %}
+{% include elements/anchor.html name="Hoverable or Toggable" %}
 
 <div class="content">
   <p>
@@ -286,7 +286,7 @@ meta:
   </div>
 </div>
 
-{% include anchor.html name="Right aligned" %}
+{% include elements/anchor.html name="Right aligned" %}
 
 <div class="content">
   <p>
@@ -314,7 +314,7 @@ meta:
   </div>
 </div>
 
-{% include anchor.html name="Dropup" %}
+{% include elements/anchor.html name="Dropup" %}
 
 <div class="content">
   <p>
@@ -331,4 +331,4 @@ meta:
   </div>
 </div>
 
-{% include variables.html type='component' %}
+{% include elements/variables.html type='component' %}
