--- a/docs/documentation/components/menu.html
+++ b/docs/documentation/components/menu.html
@@ -51,6 +51,6 @@ meta:
 </aside>
 {% endcapture %}
 
-{% include snippet.html content=menu_example size="one-third" %}
+{% include elements/snippet.html content=menu_example size="one-third" %}
 
-{% include variables.html type='component' %}
+{% include elements/variables.html type='component' %}
