--- a/docs/documentation/components/message.html
+++ b/docs/documentation/components/message.html
@@ -117,28 +117,28 @@ meta:
 {% endfor %}
 {% endcapture %}
 
-{% include snippet.html content=message_example %}
+{% include elements/snippet.html content=message_example %}
 
-{% include anchor.html name="Colors" %}
+{% include elements/anchor.html name="Colors" %}
 
-{% include snippet.html content=message_colors_example %}
+{% include elements/snippet.html content=message_colors_example %}
 
-{% include anchor.html name="Message body only" %}
+{% include elements/anchor.html name="Message body only" %}
 
 <div class="content">
   <p>You can <strong>omit</strong> the message header:</p>
 </div>
 
-{% include snippet.html content=message_body_example %}
+{% include elements/snippet.html content=message_body_example %}
 
-{% include anchor.html name="Sizes" %}
+{% include elements/anchor.html name="Sizes" %}
 
-{% include snippet.html content=message_small %}
+{% include elements/snippet.html content=message_small %}
 
-{% include snippet.html content=message_normal %}
+{% include elements/snippet.html content=message_normal %}
 
-{% include snippet.html content=message_medium %}
+{% include elements/snippet.html content=message_medium %}
 
-{% include snippet.html content=message_large %}
+{% include elements/snippet.html content=message_large %}
 
-{% include variables.html type='component' %}
+{% include elements/variables.html type='component' %}
