--- a/docs/documentation/components/modal.html
+++ b/docs/documentation/components/modal.html
@@ -121,7 +121,7 @@ meta:
   {% highlight html %}{{ modal_card }}{% endhighlight %}
 </div>
 
-{% include variables.html type='component' %}
+{% include elements/variables.html type='component' %}
 
 <div id="modal" class="modal">
   <div class="modal-background"></div>
