--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -586,7 +586,7 @@ document.addEventListener('DOMContentLoaded', function () {
   </ul>
 </div>
 
-{% include anchor.html name="Navbar brand" %}
+{% include elements/anchor.html name="Navbar brand" %}
 
 <div class="content">
   <p>
@@ -622,7 +622,7 @@ document.addEventListener('DOMContentLoaded', function () {
   </p>
 </div>
 
-{% include anchor.html name="Navbar burger" %}
+{% include elements/anchor.html name="Navbar burger" %}
 
 <div class="content">
   <p>
@@ -654,7 +654,7 @@ document.addEventListener('DOMContentLoaded', function () {
   </a>
 </div>
 
-{% include anchor.html name="Navbar menu" %}
+{% include elements/anchor.html name="Navbar menu" %}
 
 <div class="content">
   <p>
@@ -705,7 +705,7 @@ document.addEventListener('DOMContentLoaded', function () {
   </div>
 </div>
 
-{% include anchor.html name="Navbar start and navbar end" %}
+{% include elements/anchor.html name="Navbar start and navbar end" %}
 
 <div class="content">
   <p>
@@ -729,7 +729,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 {% highlight html %}{{navbar_start_end_example}}{% endhighlight %}
 
-{% include anchor.html name="Navbar item" %}
+{% include elements/anchor.html name="Navbar item" %}
 
 <div class="content">
   <p>
@@ -784,7 +784,7 @@ document.addEventListener('DOMContentLoaded', function () {
   </p>
 </div>
 
-{% include anchor.html name="Transparent navbar" %}
+{% include elements/anchor.html name="Transparent navbar" %}
 
 <div class="content">
   <p>
@@ -792,9 +792,9 @@ document.addEventListener('DOMContentLoaded', function () {
   </p>
 </div>
 
-{% include snippet.html content=navbar_transparent_example paddingless=true horizontal=true more=true %}
+{% include elements/snippet.html content=navbar_transparent_example paddingless=true horizontal=true more=true %}
 
-{% include anchor.html name="Fixed navbar" %}
+{% include elements/anchor.html name="Fixed navbar" %}
 
 {% include elements/new-tag.html version="0.6.1" %}
 
@@ -822,7 +822,7 @@ document.addEventListener('DOMContentLoaded', function () {
   </a>
 </div>
 
-{% include anchor.html name="Dropdown menu" %}
+{% include elements/anchor.html name="Dropdown menu" %}
 
 <div class="content">
   <p>
@@ -1048,7 +1048,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
 {% highlight html %}{{ navbar_divider_example }}{% endhighlight %}
 
-{% include anchor.html name="Colors" %}
+{% include elements/anchor.html name="Colors" %}
 
 <div class="tags has-addons">
   <span class="tag">New!</span>
@@ -1115,5 +1115,5 @@ document.addEventListener('DOMContentLoaded', function () {
   {% include examples/navbar-color.html color="white" light=true %}
 </div>
 
-{% include variables.html type='component' %}
+{% include elements/variables.html type='component' %}
 
