--- a/docs/documentation/components/pagination.html
+++ b/docs/documentation/components/pagination.html
@@ -183,7 +183,7 @@ meta:
   </p>
 </div>
 
-{% include snippet.html content=pagination_example horizontal=true more=true %}
+{% include elements/snippet.html content=pagination_example horizontal=true more=true %}
 
 <div class="content">
   <p>
@@ -191,7 +191,7 @@ meta:
   </p>
 </div>
 
-{% include snippet.html content=pagination_options_example horizontal=true more=true %}
+{% include elements/snippet.html content=pagination_options_example horizontal=true more=true %}
 
 <div class="content">
   <p>
@@ -199,11 +199,11 @@ meta:
   </p>
 </div>
 
-{% include snippet.html content=pagination_centered_example horizontal=true more=true %}
+{% include elements/snippet.html content=pagination_centered_example horizontal=true more=true %}
 
-{% include snippet.html content=pagination_right_example horizontal=true more=true %}
+{% include elements/snippet.html content=pagination_right_example horizontal=true more=true %}
 
-{% include anchor.html name="Styles" %}
+{% include elements/anchor.html name="Styles" %}
 
 {% include elements/new-tag.html version="0.6.2" %}
 
@@ -211,19 +211,19 @@ meta:
   Add the <code>is-rounded</code> modifier to have rounded pagination items.
 </p>
 
-{% include snippet.html content=pagination_rounded_example horizontal=true more=true %}
+{% include elements/snippet.html content=pagination_rounded_example horizontal=true more=true %}
 
-{% include anchor.html name="Sizes" %}
+{% include elements/anchor.html name="Sizes" %}
 
 <p class="content">
   The pagination comes in <strong>3 additional sizes</strong>.<br>
   You only need to append the <strong>modifier</strong> <code>is-small</code>, <code>is-medium</code>, or <code>is-large</code> to the <code>pagination</code> component.
 </p>
 
-{% include snippet.html content=pagination_small_example horizontal=true more=true %}
+{% include elements/snippet.html content=pagination_small_example horizontal=true more=true %}
 
-{% include snippet.html content=pagination_medium_example horizontal=true more=true %}
+{% include elements/snippet.html content=pagination_medium_example horizontal=true more=true %}
 
-{% include snippet.html content=pagination_large_example horizontal=true more=true %}
+{% include elements/snippet.html content=pagination_large_example horizontal=true more=true %}
 
-{% include variables.html type='component' %}
+{% include elements/variables.html type='component' %}
