--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -27,8 +27,8 @@ breadcrumb:
 
 {% include layout/main-close.html %}
 
-{% include snippet.html content=footer_example horizontal=true more=true fullwidth=true %}
+{% include elements/snippet.html content=footer_example horizontal=true more=true fullwidth=true %}
 
 {% include layout/main-open.html %}
 
-{% include variables.html %}
+{% include elements/variables.html %}
