--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -648,9 +648,9 @@ breadcrumb:
 {% endcapture %}
 
 <section class="section is-fullwidth">
-  {% include snippet.html content=heroNavbarA horizontal=true more=true %}
-  {% include snippet.html content=heroNavbarB horizontal=true more=true %}
-  {% include snippet.html content=heroNavbarC horizontal=true more=true %}
+  {% include elements/snippet.html content=heroNavbarA horizontal=true more=true %}
+  {% include elements/snippet.html content=heroNavbarB horizontal=true more=true %}
+  {% include elements/snippet.html content=heroNavbarC horizontal=true more=true %}
 </section>
 
 {% include layout/main-open.html %}
