--- a/docs/documentation/layout/level.html
+++ b/docs/documentation/layout/level.html
@@ -185,22 +185,22 @@ breadcrumb:
   </nav>
 </div>
 
-{% include snippet.html content=nav_example horizontal=true more=true %}
+{% include elements/snippet.html content=nav_example horizontal=true more=true %}
 
-{% include anchor.html name="Centered level" %}
+{% include elements/anchor.html name="Centered level" %}
 
 <div class="content">
   If you want a <strong>centered level</strong>, you can use as many <code>level-item</code> as you want, as long as they are <strong>direct</strong> children of the <code>level</code> container.
 </div>
 
-{% include snippet.html content=nav_centered_example horizontal=true more=true %}
+{% include elements/snippet.html content=nav_centered_example horizontal=true more=true %}
 
-{% include snippet.html content=nav_centered_bis_example horizontal=true more=true %}
+{% include elements/snippet.html content=nav_centered_bis_example horizontal=true more=true %}
 
-{% include anchor.html name="Mobile level" %}
+{% include elements/anchor.html name="Mobile level" %}
 
 <div class="content">
   By default, for space concerns, the level is vertical on mobile. If you want the level to be horizontal on mobile as well, add the <code>is-mobile</code> modifier on the <code>level</code> container.
 </div>
 
-{% include snippet.html content=nav_mobile_example horizontal=true more=true %}
+{% include elements/snippet.html content=nav_mobile_example horizontal=true more=true %}
