--- a/docs/documentation/layout/media-object.html
+++ b/docs/documentation/layout/media-object.html
@@ -200,18 +200,18 @@ breadcrumb:
   </article>
 </div>
 
-{% include snippet.html content=media_example horizontal=true more=true %}
+{% include elements/snippet.html content=media_example horizontal=true more=true %}
 
 <div class="content">
   <p>You can include <em>any</em> other Bulma element, like inputs, textareas, icons, buttons... or even a <strong>nav bar</strong>.</p>
 </div>
 
-{% include snippet.html content=media_bis_example horizontal=true more=true %}
+{% include elements/snippet.html content=media_bis_example horizontal=true more=true %}
 
-{% include anchor.html name="Nesting" %}
+{% include elements/anchor.html name="Nesting" %}
 
 <div class="content">
   <p>You can nest media objects up to <strong>3 levels</strong> deep.</p>
 </div>
 
-{% include snippet.html content=media_nested_example horizontal=true more=true %}
+{% include elements/snippet.html content=media_nested_example horizontal=true more=true %}
