--- a/docs/documentation/layout/tiles.html
+++ b/docs/documentation/layout/tiles.html
@@ -440,7 +440,7 @@ tile is-ancestor
 
 {% highlight html %}{{ tile_empty }}{% endhighlight %}
 
-{% include anchor.html name="Example" %}
+{% include elements/anchor.html name="Example" %}
 
 <div class="tile is-ancestor">
   <div class="tile is-vertical is-8">
@@ -492,7 +492,7 @@ tile is-ancestor
 
 {% highlight html %}{{ tile_default }}{% endhighlight %}
 
-{% include anchor.html name="Modifiers" %}
+{% include elements/anchor.html name="Modifiers" %}
 
 <div class="content">
   <p>The <code>tile</code> element has <strong>16 modifiers</strong>:</p>
@@ -521,7 +521,7 @@ tile is-ancestor
   </ul>
 </div>
 
-{% include anchor.html name="How it works: Nesting" %}
+{% include elements/anchor.html name="How it works: Nesting" %}
 
 <div class="content">
   <p>Everything is a tile! To create a grid of tiles, you only need to <strong>nest</strong> <code>tile</code> elements.</p>
@@ -606,7 +606,7 @@ tile is-ancestor
 
 {% highlight html %}{{ tile_lorem }}{% endhighlight %}
 
-{% include anchor.html name="Nesting requirements" %}
+{% include elements/anchor.html name="Nesting requirements" %}
 
 <article class="message is-danger">
   <div class="message-header">
@@ -682,7 +682,7 @@ tile is-ancestor
 
 {% highlight html %}{{ tile_any_content }}{% endhighlight %}
 
-{% include anchor.html name="3 columns" %}
+{% include elements/anchor.html name="3 columns" %}
 
 <div class="tile is-ancestor">
   <div class="tile is-parent">
@@ -777,7 +777,7 @@ tile is-ancestor
 
 {% highlight html %}{{ tile_3_columns }}{% endhighlight %}
 
-{% include anchor.html name="4 columns" %}
+{% include elements/anchor.html name="4 columns" %}
 
 <div class="tile is-ancestor">
   <div class="tile is-parent">
