--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -6,7 +6,7 @@ breadcrumb:
 - blog
 ---
 
-{% include navbar.html id="Blog" %}
+{% include global/navbar.html id="Blog" %}
 
 <main class="bd-main">
   <div class="bd-side-background"></div>
@@ -67,7 +67,7 @@ breadcrumb:
           </div>
 
           <div class="bd-header-carbon">
-            {% include carbon.html %}
+            {% include elements/carbon.html %}
           </div>
         </header>
 
