--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -170,50 +170,50 @@ meta:
 </div>
 
 <hr>
-{% include snippet.html content=breadcrumb_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_example horizontal=true clipped=true %}
 
-{% include anchor.html name="Alignment" %}
+{% include elements/anchor.html name="Alignment" %}
 
 <div class="content">
   <p>For alternative alignments, use the <code>is-centered</code> and <code>is-right</code> modifiers on the <code>.breadcrumb</code> container.</p>
 </div>
 
-{% include snippet.html content=breadcrumb_centered_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_centered_example horizontal=true clipped=true %}
 
-{% include snippet.html content=breadcrumb_right_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_right_example horizontal=true clipped=true %}
 
-{% include anchor.html name="Icons" %}
+{% include elements/anchor.html name="Icons" %}
 
 <div class="content">
   <p>You can use any of the <a href="https://fontawesome.com/" target="_blank">Font Awesome</a> <strong>icons</strong>.</p>
 </div>
 
-{% include snippet.html content=breadcrumb_icons_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_icons_example horizontal=true clipped=true %}
 
-{% include anchor.html name="Alternative separators" %}
+{% include elements/anchor.html name="Alternative separators" %}
 
 <div class="content">
   <p>You can choose between <strong>4 additional separators</strong>: <code>has-arrow-separator</code> <code>has-bullet-separator</code> <code>has-dot-separator</code> and <code>has-succeeds-separator</code>.</p>
 </div>
 
-{% include snippet.html content=breadcrumb_arrow_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_arrow_example horizontal=true clipped=true %}
 
-{% include snippet.html content=breadcrumb_bullet_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_bullet_example horizontal=true clipped=true %}
 
-{% include snippet.html content=breadcrumb_dot_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_dot_example horizontal=true clipped=true %}
 
-{% include snippet.html content=breadcrumb_succeeds_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_succeeds_example horizontal=true clipped=true %}
 
-{% include anchor.html name="Sizes" %}
+{% include elements/anchor.html name="Sizes" %}
 
 <div class="content">
   <p>You can choose between <strong>3 additional sizes</strong>: <code>is-small</code> <code>is-medium</code> and <code>is-large</code>.</p>
 </div>
 
-{% include snippet.html content=breadcrumb_small_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_small_example horizontal=true clipped=true %}
 
-{% include snippet.html content=breadcrumb_medium_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_medium_example horizontal=true clipped=true %}
 
-{% include snippet.html content=breadcrumb_large_example horizontal=true clipped=true %}
+{% include elements/snippet.html content=breadcrumb_large_example horizontal=true clipped=true %}
 
-{% include variables.html type='component' %}
+{% include elements/variables.html type='component' %}
