--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -358,11 +358,11 @@ meta:
     The <strong>default</strong> tabs style has a single border at the bottom.</p>
 </div>
 
-{% include snippet.html content=tabs_example horizontal=true %}
+{% include elements/snippet.html content=tabs_example horizontal=true %}
 
-{% include snippet.html content=tabs_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_example horizontal=true more=true %}
 
-{% include anchor.html name="Alignment" %}
+{% include elements/anchor.html name="Alignment" %}
 
 <div class="content">
   <p>
@@ -370,44 +370,44 @@ meta:
   </p>
 </div>
 
-{% include snippet.html content=tabs_centered_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_centered_example horizontal=true more=true %}
 
-{% include snippet.html content=tabs_right_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_right_example horizontal=true more=true %}
 
-{% include anchor.html name="Icons" %}
+{% include elements/anchor.html name="Icons" %}
 
 <div class="content">
   <p>You can use any of the <a href="http://fontawesome.io/">Font Awesome</a> <strong>icons</strong>.</p>
 </div>
 
-{% include snippet.html content=tabs_icons_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_icons_example horizontal=true more=true %}
 
-{% include snippet.html content=tabs_icons_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_icons_example horizontal=true more=true %}
 
-{% include anchor.html name="Sizes" %}
+{% include elements/anchor.html name="Sizes" %}
 <div class="content">
   <p>You can choose between <strong>3 additional sizes</strong>: <code>is-small</code> <code>is-medium</code> and <code>is-large</code>.</p>
 </div>
 
-{% include snippet.html content=tabs_small_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_small_example horizontal=true more=true %}
 
-{% include snippet.html content=tabs_medium_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_medium_example horizontal=true more=true %}
 
-{% include snippet.html content=tabs_large_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_large_example horizontal=true more=true %}
 
-{% include anchor.html name="Styles" %}
+{% include elements/anchor.html name="Styles" %}
 
 <div class="content">
   If you want a more classic style with <strong>borders</strong>, just append the <code>is-boxed</code> modifier.
 </div>
 
-{% include snippet.html content=tabs_boxed_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_boxed_example horizontal=true more=true %}
 
 <p class="content">
   If you want <strong>mutually exclusive</strong> tabs (like radio buttons where clicking one deselects all other ones), use the <code>is-toggle</code> modifier.
 </p>
 
-{% include snippet.html content=tabs_toggle_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_toggle_example horizontal=true more=true %}
 
 {% include elements/new-tag.html version="0.6.2" %}
 
@@ -415,26 +415,26 @@ meta:
   If you use both <code>is-toggle</code> and <code>is-toggle-rounded</code>, the first and last items will be <strong>rounded</strong>.
 </p>
 
-{% include snippet.html content=tabs_toggle_rounded_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_toggle_rounded_example horizontal=true more=true %}
 
 <p class="content">
   If you want the tabs to take up the <strong>whole width</strong> available, use <code>is-fullwidth</code>.
 </p>
 
-{% include snippet.html content=tabs_fullwidth_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_fullwidth_example horizontal=true more=true %}
 
-{% include anchor.html name="Combining" %}
+{% include elements/anchor.html name="Combining" %}
 
 <div class="content">
   <p>You can <strong>combine</strong> different modifiers. For example, you can have <strong>centered boxed</strong> tabs, or <strong>fullwidth toggle</strong> ones.</p>
 </div>
 
-{% include snippet.html content=tabs_centered_boxed_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_centered_boxed_example horizontal=true more=true %}
 
-{% include snippet.html content=tabs_toggle_fullwidth_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_toggle_fullwidth_example horizontal=true more=true %}
 
-{% include snippet.html content=tabs_centered_boxed_medium_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_centered_boxed_medium_example horizontal=true more=true %}
 
-{% include snippet.html content=tabs_toggle_fullwidth_large_example horizontal=true more=true %}
+{% include elements/snippet.html content=tabs_toggle_fullwidth_large_example horizontal=true more=true %}
 
-{% include variables.html type='component' %}
+{% include elements/variables.html type='component' %}
