--- a/docs/documentation/layout/section.html
+++ b/docs/documentation/layout/section.html
@@ -33,4 +33,4 @@ breadcrumb:
   <p>You can use the modifiers <code>is-medium</code> and <code>is-large</code> to change the <strong>spacing</strong>.</p>
 </div>
 
-{% include variables.html %}
+{% include elements/variables.html %}
