--- a/docs/_includes/index/intro.html
+++ b/docs/_includes/index/intro.html
@@ -48,14 +48,7 @@
         </div>
       </div>
 
-      <div class="intro-partners">
-        <div class="intro-sponsor">
-          {% include index/sponsor.html %}
-        </div>
-        <div class="intro-carbon">
-          {% include elements/carbon.html %}
-        </div>
-      </div>
+      {% include index/focus.html %}
     </div>
   </div>
 </section>
