--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -76,6 +76,20 @@ breadcrumb:
             {{ content }}
           </div>
         </div>
+
+        <nav class="bd-prev-next-bis">
+          {% if page.previous.url %}
+            <a class="bd-prev-next-bis-previous" href="{{ page.previous.url }}">
+              ← {{ page.previous.title }}
+            </a>
+          {% endif %}
+
+          {% if page.next.url %}
+            <a class="bd-prev-next-bis-next" href="{{ page.next.url }}">
+              {{ page.next.title }} →
+            </a>
+          {% endif %}
+        </nav>
       </div>
 
       <aside class="bd-side">
