--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -5,7 +5,7 @@
   position: relative
   &::before
     background: $yellow
-    border-radius: $radius $radius 0 0
+    border-radius: $radius-small $radius-small 0 0
     bottom: 100%
     color: $yellow-invert
     content: "Example"
@@ -53,6 +53,7 @@
     content: "Snippet"
     align-items: stretch
     display: flex
+    margin-left: -1px
 
 .bd-snippet-preview
   padding: 1.5rem
