--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -1,3 +1,32 @@
+.bd-focus
+  margin: 6rem auto 0
+  max-width: 1080px
+
+.bd-focus-item
+  .subtitle
+    color: $grey-light
+    strong
+      color: currentColor
+
+.bd-focus-icon
+  .fa-mobile-alt
+    color: $purple
+    margin-right: -20px
+  .fa-tablet-alt
+    color: $red
+    margin-left: -20px
+  .fa-desktop
+    color: $orange
+    margin-left: -20px
+    position: relative
+    top: 2px
+  .fa-cubes
+    color: $green
+  .fa-css3
+    color: $blue
+  .fa-github-alt
+    color: $github
+
 .intro-content
   margin-left: auto
   margin-right: auto
