--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -50,7 +50,6 @@
   padding-bottom: $main-spacing
   .subtitle
     color: $text-light
-    max-width: 16em
     strong
       color: currentColor
   #meta
@@ -155,6 +154,8 @@ $sidebar-width: 14rem
   .bd-lead
     margin-left: -3rem
     padding: 3rem
+    &:last-child
+      margin-right: -3rem
   .bd-header
     align-items: center
     display: flex
@@ -165,7 +166,7 @@ $sidebar-width: 14rem
   .bd-header-carbon
     flex-grow: 0
     flex-shrink: 0
-    margin: -15px 0 -15px $main-spacing
+    margin: -15px 0 -15px ($main-spacing * 2)
     width: $carbon-width
   .bd-side
     padding: 3rem 0 3rem 1.5rem
