--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -90,23 +90,23 @@
 .bd-has-text-star
   color: $star
 
-$navbar-items: ("documentation": $primary, "templates": $info, "videos": $success, "blog": $rss, "expo": $star, "love": $red)
+// $navbar-items: ("documentation": $primary, "templates": $info, "videos": $success, "blog": $rss, "expo": $star, "love": $red)
 
-@each $name, $color in $navbar-items
-  .bd-navbar-item-#{$name}
-    .icon
-      color: $color
-    &:hover
-      background-color: $color !important
-      color: #fff !important
-      .icon
-        color: currentColor !important
+// @each $name, $color in $navbar-items
+//   .bd-navbar-item-#{$name}
+//     .icon
+//       color: $color
+//     &:hover
+//       background-color: $color !important
+//       color: #fff !important
+//       .icon
+//         color: currentColor !important
 
-.bd-navbar-item-expo
-  &:hover
-    color: #8F6900 !important
-    .icon
-      color: #F4B300 !important
+// .bd-navbar-item-expo
+//   &:hover
+//     color: #8F6900 !important
+//     .icon
+//       color: #F4B300 !important
 
 .bd-special-shadow
   background-image: linear-gradient(rgba(#000, 0.1), rgba(#000, 0))
