--- a/docs/_includes/content/klmn.html
+++ b/docs/_includes/content/klmn.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="column is-9">
-        <div class="bd-notification is-info has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           Main
         </div>
       </div>
@@ -27,17 +27,17 @@
 
     <div class="columns is-variable bd-klmn-columns">
       <div class="column is-4">
-        <div class="bd-notification is-success has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           Three columns
         </div>
       </div>
       <div class="column is-4">
-        <div class="bd-notification is-warning has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           Three columns
         </div>
       </div>
       <div class="column is-4">
-        <div class="bd-notification is-danger has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           Three columns
         </div>
       </div>
@@ -50,22 +50,22 @@
         </div>
       </div>
       <div class="column">
-        <div class="bd-notification is-info has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           2
         </div>
       </div>
       <div class="column">
-        <div class="bd-notification is-success has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           3
         </div>
       </div>
       <div class="column">
-        <div class="bd-notification is-warning has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           4
         </div>
       </div>
       <div class="column">
-        <div class="bd-notification is-danger has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           5
         </div>
       </div>
@@ -75,22 +75,22 @@
         </div>
       </div>
       <div class="column">
-        <div class="bd-notification is-info has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           7
         </div>
       </div>
       <div class="column">
-        <div class="bd-notification is-success has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           8
         </div>
       </div>
       <div class="column">
-        <div class="bd-notification is-warning has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           9
         </div>
       </div>
       <div class="column">
-        <div class="bd-notification is-danger has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           10
         </div>
       </div>
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="column">
-        <div class="bd-notification is-info has-text-centered">
+        <div class="bd-notification is-primary has-text-centered">
           12
         </div>
       </div>
