--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -55,7 +55,6 @@ breadcrumb:
           {% endif %}
         </div>
 
-
         <header class="bd-header">
           <div class="bd-header-titles">
             <h1 class="title">
@@ -72,8 +71,12 @@ breadcrumb:
         </header>
 
         <div class="bd-content">
-          <div class="content is-medium">
-            {{ content }}
+          <div class="columns">
+            <div class="column is-offset-2 is-8">
+              <div class="content is-medium">
+                {{ content }}
+              </div>
+            </div>
           </div>
         </div>
 
@@ -91,20 +94,6 @@ breadcrumb:
           {% endif %}
         </nav>
       </div>
-
-      <aside class="bd-side">
-        <nav class="bd-categories">
-          {% for post in site.posts %}
-            <div class="bd-category">
-              <header class="bd-category-header">
-                <a class="bd-category-name" href="{{ post.url }}">
-                  <strong>{{ post.name }}</strong>
-                </a>
-              </header>
-            </div>
-          {% endfor %}
-        </nav>
-      </aside>
     </div>
   </div>
 </main>
