--- a/docs/_sass/highlight.sass
+++ b/docs/_sass/highlight.sass
@@ -2,7 +2,8 @@
   background-color: #f5f5f5
   color: #586e75
   pre
-    font-size: 12px
+    font-size: 0.875em
+    line-height: 1.375
   .c
     color: #93a1a1
   .err,
