--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -1,3 +1,7 @@
++selection
+  background-color: $primary
+  color: $primary-invert
+
 .bd-links
   counter-reset: bd-links
 
@@ -196,6 +200,8 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 .bd-notification
   background-color: $background
   border-radius: $radius
+  color: $text-light
+  font-weight: $weight-semibold
   padding: 1.25rem 0
   position: relative
   text-align: center
@@ -206,9 +212,11 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
     color: currentColor
   code,
   pre
-    background: $white
+    background-color: rgba($black, 0.2)
+    border-radius: $radius
+    color: $white
   pre code
-    background: transparent
+    background-color: transparent
   // Colors
   @each $name, $pair in $colors
     $color: nth($pair, 1)
