--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9715,7 +9715,8 @@ label.panel-block:hover {
 }
 
 .highlight pre {
-  font-size: 12px;
+  font-size: 0.875em;
+  line-height: 1.375;
 }
 
 .highlight .c {
@@ -10561,6 +10562,16 @@ svg {
   text-decoration: underline;
 }
 
+::-moz-selection {
+  background-color: #00d1b2;
+  color: #fff;
+}
+
+::selection {
+  background-color: #00d1b2;
+  color: #fff;
+}
+
 .bd-links {
   counter-reset: bd-links;
 }
@@ -10810,6 +10821,8 @@ svg {
 .bd-notification {
   background-color: whitesmoke;
   border-radius: 4px;
+  color: #7a7a7a;
+  font-weight: 600;
   padding: 1.25rem 0;
   position: relative;
   text-align: center;
@@ -10824,11 +10837,13 @@ svg {
 
 .bd-notification code,
 .bd-notification pre {
-  background: white;
+  background-color: rgba(10, 10, 10, 0.2);
+  border-radius: 4px;
+  color: white;
 }
 
 .bd-notification pre code {
-  background: transparent;
+  background-color: transparent;
 }
 
 .bd-notification.is-white {
@@ -10896,7 +10911,7 @@ svg {
 .bd-example,
 .bd-structure,
 .bd-snippet {
-  border: 1px solid #ffdd57;
+  border: 2px solid whitesmoke;
   position: relative;
 }
 
@@ -10913,6 +10928,7 @@ svg {
   font-weight: bold;
   left: -1px;
   letter-spacing: 1px;
+  margin-left: -1px;
   padding: 3px 5px;
   position: absolute;
   text-transform: uppercase;
@@ -10960,7 +10976,6 @@ svg {
 }
 
 .bd-snippet {
-  border: 2px solid whitesmoke;
   margin-top: 2rem;
   position: relative;
 }
@@ -10969,7 +10984,6 @@ svg {
   content: "Snippet";
   align-items: stretch;
   display: flex;
-  margin-left: -1px;
 }
 
 .bd-snippet-preview {
@@ -11397,14 +11411,6 @@ html.route-index .title.is-2 a:hover {
   color: #3273dc;
 }
 
-html.route-index .title.is-2 .icon.is-medium {
-  font-size: 56px;
-  left: -80px;
-  opacity: 0.1;
-  position: absolute;
-  top: 10px;
-}
-
 html.route-index .hero .title.is-2 a {
   color: white;
 }
@@ -11425,9 +11431,6 @@ html.route-index .hero.is-primary a.column:hover .title strong {
 @media screen and (max-width: 979px) {
   html.route-index .title.is-2 a {
     padding-left: 0;
-  }
-  html.route-index .title.is-2 .icon.is-medium {
-    display: none;
   }
 }
 
