--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -1,7 +1,7 @@
 ---
 title: Hero
 layout: documentation
-hide_carbon: true
+hide_categories: true
 doc-tab: layout
 doc-subtab: hero
 breadcrumb:
@@ -11,7 +11,7 @@ breadcrumb:
 - layout-hero
 ---
 
-{% include layout/main-close.html %}
+{% include layout/main-close.html show_categories=true %}
 
 <section class="section is-fullwidth">
   <div class="bd-example">
