--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -7,7 +7,7 @@
 
     <a class="navbar-item is-hidden-desktop" href="{{ site.data.meta.github }}" target="_blank">
       <span class="icon" style="color: #333;">
-        <i class="fab fa-lg fa-github"></i>
+        <i class="fab fa-lg fa-github-alt"></i>
       </span>
     </a>
 
@@ -72,7 +72,7 @@
     <div class="navbar-end">
       <a class="navbar-item is-hidden-desktop-only" href="{{ site.data.meta.github }}" target="_blank">
         <span class="icon" style="color: #333;">
-          <i class="fab fa-lg fa-github"></i>
+          <i class="fab fa-lg fa-github-alt"></i>
         </span>
       </a>
       <a class="navbar-item is-hidden-desktop-only" href="{{ site.data.meta.twitter }}" target="_blank">
