--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -1,7 +1,7 @@
 ---
 title: Container
 layout: documentation
-hide_carbon: true
+hide_categories: true
 doc-tab: layout
 doc-subtab: container
 breadcrumb:
@@ -66,7 +66,7 @@ breadcrumb:
   <p>The values <strong>960</strong>, <strong>1152</strong> and <strong>1344</strong> have been chosen because they are divisible by both <strong>12</strong> and <strong>16</strong>.</p>
 </div>
 
-{% include layout/main-close.html %}
+{% include layout/main-close.html show_categories=true %}
 
 <div class="bd-example is-fullwidth">
   {{container_example}}
