--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -1,7 +1,7 @@
 ---
 title: Footer
 layout: documentation
-hide_carbon: true
+hide_categories: true
 doc-tab: layout
 doc-subtab: footer
 breadcrumb:
@@ -25,7 +25,7 @@ breadcrumb:
 </footer>
 {% endcapture %}
 
-{% include layout/main-close.html %}
+{% include layout/main-close.html show_categories=true %}
 
 {% include elements/snippet.html content=footer_example horizontal=true more=true fullwidth=true %}
 
