Add index sponsor

--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -1,6 +1,6 @@
 .bd-focus
   margin: 6rem auto 0
-  max-width: 1080px
+  max-width: $intro-width
 
 .bd-focus-item
   .subtitle
@@ -173,12 +173,6 @@
     transition: 100ms opacity
     &:hover
       opacity: 1
-
-.intro-partners
-  margin-top: 6rem
-
-.intro-carbon
-  margin-top: 0.5rem
 
 +mobile
   .intro-buttons
