--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -13,7 +13,9 @@ $star: #FFD257
 $rss: #f26522
 
 $carbon-width: 300px
+$carbon-height: 100px
 $main-spacing: 3rem
+$intro-width: 1130px
 
 =selection($current-selector: false)
   @if $current-selector
