--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -8,28 +8,44 @@
     margin-right: 3rem
     width: 150px
 
-.bd-sponsor
-  margin-left: auto
-  margin-right: auto
-  text-align: center
-
-.bd-sponsor-title
-  font-size: $size-small
-  margin-bottom: 1em
-  opacity: 0.5
-
-.bd-sponsor-list
+.bd-partner-sponsors
   align-items: center
   display: flex
   flex-wrap: wrap
-  justify-content: center
+  justify-content: space-between
+  margin-bottom: -1rem
   a
     align-items: center
     display: flex
     justify-content: center
-    margin: 1rem
-    width: 160px
-    img
-      max-height: 60px
-      width: auto
+    margin: 0 1rem 1rem 0
+    min-height: $carbon-height
 
+.bd-partners
+  background-color: $white-bis
+  .container
+    max-width: $intro-width
+  #carbonads
+    .carbon-text
+      padding-bottom: 0
+    .carbon-poweredby
+      display: none
+
+.bd-partner-title
+  color: $grey-light
+  font-size: 0.875rem
+  margin-bottom: 1rem
+
++tablet
+  .bd-partners-list
+    align-items: flex-start
+    display: flex
+  .bd-partner
+    &.bd-is-sponsor
+      flex-grow: 1
+      flex-shrink: 1
+    &.bd-is-carbon
+      flex-grow: 0
+      flex-shrink: 0
+      margin-left: ($main-spacing * 2)
+      width: $carbon-width
