--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10091,7 +10091,7 @@ svg {
 
 .bd-focus {
   margin: 6rem auto 0;
-  max-width: 1080px;
+  max-width: 1130px;
 }
 
 .bd-focus-item .subtitle {
@@ -10322,14 +10322,6 @@ svg {
 
 .intro-author span:hover {
   opacity: 1;
-}
-
-.intro-partners {
-  margin-top: 6rem;
-}
-
-.intro-carbon {
-  margin-top: 0.5rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -12164,36 +12156,59 @@ html.route-index .hero.is-primary a.column:hover .title strong {
   width: 150px;
 }
 
-.bd-sponsor {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
-
-.bd-sponsor-title {
-  font-size: 0.75rem;
-  margin-bottom: 1em;
-  opacity: 0.5;
-}
-
-.bd-sponsor-list {
+.bd-partner-sponsors {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+  margin-bottom: -1rem;
 }
 
-.bd-sponsor-list a {
+.bd-partner-sponsors a {
   align-items: center;
   display: flex;
   justify-content: center;
-  margin: 1rem;
-  width: 160px;
+  margin: 0 1rem 1rem 0;
+  min-height: 100px;
 }
 
-.bd-sponsor-list a img {
-  max-height: 60px;
-  width: auto;
+.bd-partners {
+  background-color: #fafafa;
+}
+
+.bd-partners .container {
+  max-width: 1130px;
+}
+
+.bd-partners #carbonads .carbon-text {
+  padding-bottom: 0;
+}
+
+.bd-partners #carbonads .carbon-poweredby {
+  display: none;
+}
+
+.bd-partner-title {
+  color: #b5b5b5;
+  font-size: 0.875rem;
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 769px), print {
+  .bd-partners-list {
+    align-items: flex-start;
+    display: flex;
+  }
+  .bd-partner.bd-is-sponsor {
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+  .bd-partner.bd-is-carbon {
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin-left: 6rem;
+    width: 300px;
+  }
 }
 
 @keyframes fadeIn {
